--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -18,6 +18,7 @@
 @import "../modules/connectMap/css/connectMap";
 @import "../modules/login/css/login";
 @import "../modules/main/css/infoArchives";
+@import "../modules/previewRecord/css/previewRecord";
 @import "../modules/projectManage/css/projectManage";
 @import "../modules/batch/css/batch";
 @import "../modules/serviceWatch/css/serviceWatch";
