--- a/app/css/main/_table.scss
+++ b/app/css/main/_table.scss
@@ -1,8 +1,11 @@
 @charset "utf-8";
 td{
-  vertical-align: middle;
+  vertical-align: middle !important;
   //padding: 11px 8px;
   //white-space: nowrap;
   //overflow: hidden;
   //text-overflow: ellipsis;
+}
+tr{
+  vertical-align: middle !important;
 }
