--- a/app/modules/serviceWatch/css/_serviceWatch.scss
+++ b/app/modules/serviceWatch/css/_serviceWatch.scss
@@ -65,15 +65,22 @@
   .table__th--tr{
     background: #4F93C5;
     color: #fff;
+    height: 40px;
     th{
       font-weight: normal;
-      padding: 11px 8px;
+      padding: 11px 5px;
       &:hover{
         background: transparent;
       }
     }
   }
-
+  &_tr{
+    height: 40px;
+    td{
+      padding: 8px 5px !important;
+      line-height: normal !important;
+    }
+  }
 }
 .service--watch--sheet{
   box-sizing: content-box;
@@ -113,16 +120,32 @@
   box-sizing: border-box;
   padding: 0 30px;
   .attr--box{
-    display: inline-block;
+    //display: inline-block;
     flex: initial;
     -webkit-flex: initial;
-    width: 200px;
-    min-width: 100px;
-    padding: 8px;
+    width: auto;
+    min-width: 200px;
+    padding: 0 8px;
+    //word-break: keep-all;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     &.date{
       flex: 1;
       min-width: 250px;
     }
+    .progress--info{
+      display: inline-block;
+      vertical-align: middle;
+      width:100px;
+      margin: 0;
+    }
+  }
+}
+.no--task--box{
+  text-align: center;
+  .no--task{
+    color: #ab0909;
   }
 }
 
