--- a/app/modules/batch/css/_batch.scss
+++ b/app/modules/batch/css/_batch.scss
@@ -141,8 +141,9 @@
     //}
     border: 1px solid #dbe1e4;
     //border-bottom: none;
-    margin: 15px;
-    padding-bottom: 15px;
+    margin: 0 16px 26px 16px;
+    margin-top: -10px;
+    overflow-y: hidden;
     .operation--box{
       background: #f5f5f5;
       padding: 15px;
@@ -191,9 +192,10 @@
     height: calc(100% - 67px);
   }
 }
-
-.batch--ui--grid--icon{
-  display: inline-block;
-  font-size:16px;
-  vertical-align: middle;
+.batch--ui--grid--icon--box{
+  .batch--ui--grid--icon{
+    display: inline-block;
+    font-size:16px;
+    vertical-align: text-top;
+  }
 }
