--- a/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
+++ b/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
@@ -1,5 +1,5 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <div class="" >
+    <div class="batch--ui--grid--icon--box" >
         <span  style="color:green;" ng-if="row.entity.batchStatus == 5" class="fa fa-check-circle-o batch--ui--grid--icon"></span>
         <span  style="color:#3a87ad;" ng-if="row.entity.batchStatus != 5 && row.entity.batchStatus != 6" class="glyphicon glyphicon-cog batch--ui--grid--icon"></span>
 
