--- a/app/modules/main/css/_infoArchives.scss
+++ b/app/modules/main/css/_infoArchives.scss
@@ -34,7 +34,7 @@
   margin: 0 auto;
   height: 100%;
   position: relative;
-  border-right: 1px solid #e4e4e4;
+  //border-right: 1px solid #e4e4e4;
   .info--archive--sidebar--wrapper{
     height: 100%;
     width: 178px;
@@ -161,6 +161,7 @@
       z-index: 10;
       width: 100%;
       height: calc(100% - 57px);
+      border-right: 1px solid #e4e4e4;
       //border-top: 1px solid #dfe0e1;
       //border-left: 1px solid #d7d7d7;
       //border-right: 1px solid #f2f2f2;
